tests/suite/errors/e37_while_let_int_pattern_on_bool.rs
// err: integer pattern on `bool`

fn main() {
    let flag: bool = true;
    while let 1 = flag {
        println!("loop");
    }
}
